[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/user interface/themes/AlloyInk-lgdWw.otf" type="DynamicFontData" id=1]
[ext_resource path="res://src/user interface/ChangeSceneButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/screens/UserDataScreen.gd" type="Script" id=3]
[ext_resource path="res://assets/user interface/themes/main_theme.tres" type="Theme" id=4]
[ext_resource path="res://assets/user interface/backgrounds/UserData.png" type="Texture" id=5]
[ext_resource path="res://assets/user interface/bubblebuttons/png/Button_32.png" type="Texture" id=7]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 172, 173 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 172, 173 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 172, 173 )

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 50.0
content_margin_right = 30.0
content_margin_top = 30.0
content_margin_bottom = 20.0
bg_color = Color( 0.219608, 0.843137, 0.823529, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.188235, 0.713726, 0.698039, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="DynamicFont" id=10]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 50.0
content_margin_right = 30.0
content_margin_top = 30.0
content_margin_bottom = 20.0
bg_color = Color( 0.219608, 0.843137, 0.823529, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.188235, 0.713726, 0.698039, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxLine" id=6]
color = Color( 0.188235, 0.713726, 0.698039, 1 )
thickness = 10
vertical = true

[sub_resource type="StyleBoxLine" id=7]
color = Color( 0.188235, 0.713726, 0.698039, 1 )
thickness = 10
vertical = true

[sub_resource type="DynamicFont" id=8]
size = 40
font_data = ExtResource( 1 )

[node name="UserDataScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="BackButton" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -457.0
margin_top = -210.0
margin_right = -307.0
margin_bottom = -60.0
rect_pivot_offset = Vector2( 75, 75 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
next_scene_path = "res://src/screens/LeaderboardScreen.tscn"

[node name="UserDataScroll1" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -416.0
margin_top = -207.0
margin_right = 416.0
margin_bottom = -107.0
custom_styles/bg = SubResource( 9 )
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="UserDataContainer" type="HBoxContainer" parent="UserDataScroll1"]
light_mask = 2
margin_left = 50.0
margin_top = 30.0
margin_right = 802.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
custom_constants/separation = 5

[node name="UserDataGameTextContainer" type="VBoxContainer" parent="UserDataScroll1/UserDataContainer"]
margin_right = 103.0
margin_bottom = 50.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
custom_constants/separation = 10

[node name="GameText" type="Label" parent="UserDataScroll1/UserDataContainer/UserDataGameTextContainer"]
margin_right = 103.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0.188235, 0.713726, 0.698039, 1 )
custom_fonts/font = SubResource( 10 )
text = "TENT."
__meta__ = {
"_edit_use_anchors_": true
}

[node name="UserDataDecibelTextContainer" type="VBoxContainer" parent="UserDataScroll1/UserDataContainer"]
margin_left = 108.0
margin_right = 379.0
margin_bottom = 50.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
custom_constants/separation = 27

[node name="DecibelText" type="Label" parent="UserDataScroll1/UserDataContainer/UserDataDecibelTextContainer"]
margin_right = 271.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0.188235, 0.713726, 0.698039, 1 )
custom_fonts/font = SubResource( 10 )
text = "DECIBEL"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="UserDataScoreTextContainer" type="VBoxContainer" parent="UserDataScroll1/UserDataContainer"]
margin_left = 384.0
margin_right = 565.0
margin_bottom = 50.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 27

[node name="ScoreText" type="Label" parent="UserDataScroll1/UserDataContainer/UserDataScoreTextContainer"]
margin_right = 181.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0.188235, 0.713726, 0.698039, 1 )
custom_fonts/font = SubResource( 10 )
text = "PUNT."
__meta__ = {
"_edit_use_anchors_": true
}

[node name="UserDataDurationTextContainer" type="VBoxContainer" parent="UserDataScroll1/UserDataContainer"]
margin_left = 570.0
margin_right = 752.0
margin_bottom = 50.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 27

[node name="DurationText" type="Label" parent="UserDataScroll1/UserDataContainer/UserDataDurationTextContainer"]
margin_right = 182.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0.188235, 0.713726, 0.698039, 1 )
custom_fonts/font = SubResource( 10 )
text = "TEMPO"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="UserDataScroll2" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.708854
anchor_right = 0.5
anchor_bottom = 0.708854
margin_left = -400.0
margin_top = -498.0
margin_right = 400.0
margin_bottom = 302.0
custom_styles/bg = SubResource( 5 )
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="UserDataContainer" type="HBoxContainer" parent="UserDataScroll2"]
light_mask = 2
margin_left = 50.0
margin_top = 30.0
margin_right = 770.0
margin_bottom = 780.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
custom_constants/separation = 30

[node name="UserDataGameContainer" type="VBoxContainer" parent="UserDataScroll2/UserDataContainer"]
margin_right = 58.0
margin_bottom = 750.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
custom_constants/separation = 30

[node name="VSeparator" type="VSeparator" parent="UserDataScroll2/UserDataContainer"]
margin_left = 88.0
margin_right = 92.0
margin_bottom = 750.0
custom_styles/separator = SubResource( 6 )

[node name="UserDataDecibelContainer" type="VBoxContainer" parent="UserDataScroll2/UserDataContainer"]
margin_left = 122.0
margin_right = 357.0
margin_bottom = 750.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_constants/separation = 30

[node name="VSeparator2" type="VSeparator" parent="UserDataScroll2/UserDataContainer"]
margin_left = 387.0
margin_right = 391.0
margin_bottom = 750.0
custom_styles/separator = SubResource( 7 )

[node name="UserDataScoreContainer" type="VBoxContainer" parent="UserDataScroll2/UserDataContainer"]
margin_left = 421.0
margin_right = 538.0
margin_bottom = 750.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30

[node name="VSeparator3" type="VSeparator" parent="UserDataScroll2/UserDataContainer"]
margin_left = 568.0
margin_right = 572.0
margin_bottom = 750.0
custom_styles/separator = SubResource( 7 )

[node name="UserDataDurationContainer" type="VBoxContainer" parent="UserDataScroll2/UserDataContainer"]
margin_left = 602.0
margin_right = 720.0
margin_bottom = 750.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30

[node name="UserAccessContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.878646
anchor_right = 0.5
anchor_bottom = 0.878646
margin_left = -554.0
margin_top = -20.0
margin_right = 554.0
margin_bottom = 20.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LastUserAccessText" type="Label" parent="UserAccessContainer"]
margin_left = 185.0
margin_right = 716.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 8 )
text = "ULTIMO ACCESSO UTENTE: "
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LastUserAccessDate" type="Label" parent="UserAccessContainer"]
margin_left = 720.0
margin_right = 922.0
margin_bottom = 40.0
custom_colors/font_color = Color( 1, 0.8, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "27/05/2023"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="UserDataScroll3" type="ScrollContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.708854
anchor_right = 0.5
anchor_bottom = 0.708854
margin_left = -400.0
margin_top = -500.0
margin_right = 400.0
margin_bottom = 300.0
custom_styles/bg = SubResource( 5 )
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="UserDataContainer" type="HBoxContainer" parent="UserDataScroll3"]
light_mask = 2
margin_left = 50.0
margin_top = 30.0
margin_right = 770.0
margin_bottom = 780.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
custom_constants/separation = 30

[node name="UserDataGameContainer" type="VBoxContainer" parent="UserDataScroll3/UserDataContainer"]
margin_right = 58.0
margin_bottom = 750.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
custom_constants/separation = 30

[node name="VSeparator" type="VSeparator" parent="UserDataScroll3/UserDataContainer"]
margin_left = 88.0
margin_right = 92.0
margin_bottom = 750.0
custom_styles/separator = SubResource( 6 )

[node name="UserDataDecibelContainer" type="VBoxContainer" parent="UserDataScroll3/UserDataContainer"]
margin_left = 122.0
margin_right = 357.0
margin_bottom = 750.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_constants/separation = 30

[node name="VSeparator2" type="VSeparator" parent="UserDataScroll3/UserDataContainer"]
margin_left = 387.0
margin_right = 391.0
margin_bottom = 750.0
custom_styles/separator = SubResource( 7 )

[node name="UserDataScoreContainer" type="VBoxContainer" parent="UserDataScroll3/UserDataContainer"]
margin_left = 421.0
margin_right = 538.0
margin_bottom = 750.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30

[node name="VSeparator3" type="VSeparator" parent="UserDataScroll3/UserDataContainer"]
margin_left = 568.0
margin_right = 572.0
margin_bottom = 750.0
custom_styles/separator = SubResource( 7 )

[node name="UserDataDurationContainer" type="VBoxContainer" parent="UserDataScroll3/UserDataContainer"]
margin_left = 602.0
margin_right = 720.0
margin_bottom = 750.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
